httpbin/httpbin-deploy-v1-v2-mirroring.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: httpbin-v1
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: httpbin
      version: v1
  template: 
    metadata: 
      labels: 
        app: httpbin
        version: v1
    spec: 
      containers: 
      - image: docker.io/kennethreitz/httpbin
        imagePullPolicy: IfNotPresent
        name: httpbin
        command: ["gunicorn","--access-logfile","-","-b","0.0.0.0:80","httpbin:app"]
        ports: 
        - containerPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: httpbin-v2
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: httpbin
      version: v2
  template: 
    metadata: 
      labels: 
        app: httpbin
        version: v2
    spec: 
      containers: 
      - image: docker.io/kennethreitz/httpbin
        imagePullPolicy: IfNotPresent
        name: httpbin
        command: ["gunicorn","--access-logfile","-","-b","0.0.0.0:80","httpbin:app"]
        ports: 
        - containerPort: 80
