httpbin/egress-gateway-baidu.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: baidu-egressgateway
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - baidu.com
