httpbin/destination-rule-egressgateway-httpbin.yaml
# name: httpbin-destinationrule-for-egressgateway
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata: 
  name: dr-for-egressgateway
spec: 
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets: 
  - name: httpbin
